# otf-fea-rs

./: .gitignore  .gitmodules  Cargo.toml
examples/: plex_compile.rs  plex_compile_bin.rs
scripts/: compile_test.sh  parse_test.sh
src/: compiler.rs  glyph.rs  glyph_class.rs  glyph_order.rs  lib.rs  main.rs  parser.rs  positioned.rs  tag.rs  ttf_loader.rs
src/compile_model/: class_def.rs  compiler_state.rs  coverage.rs  device.rs  encoded_tables.rs  error.rs  feature_list.rs  gdef.rs  gpos.rs  head.rs  lookup_list.rs  mod.rs  script_list.rs  source_map.rs  ttf_table.rs  util.rs  value_record.rs
src/compile_model/lookup/: list.rs  lookup.rs  mod.rs  subtable.rs  table.rs
src/compile_model/lookup/table/: codec.rs  mod.rs
src/compile_model/tables/: gpos.rs  head.rs  mod.rs  name.rs
src/compile_model/tables/gpos/: anchor.rs  (+4 more)
src/compile_model/util/: checked_from.rs  checksum.rs  decode.rs  encode.rs  fixed1616.rs  long_date_time.rs  mod.rs  tag.rs  ttf_tagged.rs  ttf_version.rs
src/parse_model/: anchor.rs  anonymous.rs  block.rs  class_name.rs  contour_point.rs  device.rs  feature.rs  feature_definition.rs  feature_names.rs  glyph.rs  glyph_class.rs  glyph_pattern.rs  language.rs  language_system.rs  lookup.rs  lookup_definition.rs  lookup_flag.rs  mark_class.rs  metric.rs  mod.rs  name.rs  parameters.rs  position.rs  positioned.rs  script.rs  string.rs  substitute.rs  table.rs  tag.rs  top_level.rs  util.rs  value_record.rs
src/parse_model/tables/: gdef.rs  head.rs  hhea.rs  mod.rs  name.rs  vhea.rs
src/util/: either.rs  mod.rs  range.rs  variant.rs
(+14 files in other folders)
