[package]
name = "otf-fea-rs"
version = "0.1.0"
authors = ["William Light <wrl@lhiaudio.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

ascii = "1.0.0"
combine = "4.1"

endian_codec = "0.1"
fixed = "1"
chrono = "0.4"
encoding_rs = "0.8"
bitflags = "1.2"

[dependencies.arrayvec]
version = "0.5"
features = ["array-sizes-33-128"]
